v1.unrelease
	New Features
		- Highlight matched part of the string.
		- Make window switcher string customizable.
	Improvements
		- Improved selection mode in dmenu with selection counter. 
		- Improved selection mode with 'dot' indicator.
		- Fix Current Desktop window switcher.
		- Fix  launching in terminal.
		- Supports include in config.
		- Add Control+k remove till eol keybinding.
	Removals:
		- Remove xlib dependency (xcb-xrm)
		- Remove fuzzy option
		- Remove i3 workaround as it no longer needed since I3 v4.9. (Feb. 2015)

v1.1.0
    New Features
        - Keys mode, showing keybindings.
        - Stop cycling option (#407) (Thx to Yaroslav)
        - Kill window on delete entry (#316)
    Improvements
        - Add Control+Backspace as remove word back keybinding.
        - Allow user to use X11 background for fake transparency (#390)
        - Allow user to specify background image.
        - Improved keybinding handling, allowing on-release and modifier only (#384).
        - Use display name for prompt (#409)
        - Parse subdirectories in drun parser (#416)
        - Switch to stop cycling (#407)
    Bug fixes
        - Grab mouse pointer with keyboard

1.0.1
    Bug fixes
         - Fix typo in manpage.
         - Return old behaviour for rofi placement (#395, #389)
         - Switch desktop when switching window (#393)
         - Remove unneeded use of bash (#391)
         - Make history parser more robust against corrupted files. (#388)
         - Fix desktop number (#386)

1.0.0
    New Features

        - Blinking cursor
        - BliSeparate configuration file
        - BliHistory in drun mode (#343)
        - BliContext menu mode, show rofi at the mouse pointer

    Improvement
        - auto select and single item on dmenu mode (#281)
        - Unlimited window title length.
        - Correctly follow the active desktop, instead of active window.
        - If requesting modi that is not enabled, show it anyway.