@@ -9,6 +9,7 @@ v1.unrelease
 		- Fix  launching in terminal.
 		- Supports include in config.
 		- Add Control+k remove till eol keybinding.
+		- Change clear line to Control+w and make Control+u remove till sol (matching readline)
 	Removals:
 		- Remove xlib dependency (xcb-xrm)
 		- Remove fuzzy option
